fixes: styling and layout contrast

--- a/assets/scss/_logo.scss
+++ b/assets/scss/_logo.scss
@@ -4,7 +4,7 @@
   text-decoration: none;
   font-weight: bold;
   font-display: auto;
-  font-family: Space Mono, monospace, monospace;
+  font-family: "Jetbrains Mono", monospace, monospace;
 
   img {
     height: 44px;
