--- a/assets/scss/_menu.scss
+++ b/assets/scss/_menu.scss
@@ -70,7 +70,7 @@
   a {
     display: inline-block;
     margin-right: 15px;
-    text-decoration: none;
+    text-decoration: none !important;
 
     &:hover {
       text-decoration: underline;
