--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -30,4 +30,4 @@ $media-size-tablet: "(max-width: 900px)";
 }
 
 /* Content */
-$max-width: 1500px;
+$max-width: 1200px;
